# Reflection

./: CMakeLists.txt  README.MD
PluginCore/: CMakeLists.txt
PluginCore/include/: PluginBase.h
PluginCore/src/: PluginBase.cpp
PluginManager/: CMakeLists.txt
PluginManager/include/: PluginManager.h
PluginManager/src/: PluginManager.cpp
ReflectCore/: CMakeLists.txt
ReflectCore/include/: ReflectRegister.h
ReflectCore/src/: ReflectBase.cpp  ReflectCore.cpp  ReflectFactory.cpp
examplePlugin/: CMakeLists.txt
examplePlugin/include/: exampleplugin_global.h
examplePlugin/src/: examplePlugin.cpp
include/PluginManager/: PluginBase.h  PluginManager_global.h
include/ReflectCore/: ReflectBase.h  ReflectCore.h  ReflectCore_global.h  ReflectFactory.h  ReflectRegister.h
include/examplePlugin/: examplePlugin.h
lib/: PluginCore.lib  PluginManager.lib  ReflectCore.lib  examplePlugin.lib
test/: CMakeLists.txt  test.cpp
